@@ -3,6 +3,7 @@ package ru.practicum.shareit.item.service;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 import ru.practicum.shareit.booking.mapper.BookingMapper;
 import ru.practicum.shareit.booking.model.Booking;
 import ru.practicum.shareit.booking.repository.BookingRepository;
@@ -21,13 +22,15 @@ import ru.practicum.shareit.user.model.User;
 import ru.practicum.shareit.user.repository.UserRepository;
 
 import java.time.LocalDateTime;
+import java.util.Collections;
 import java.util.Comparator;
 import java.util.List;
 import java.util.stream.Collectors;
 
+@Slf4j
 @Service
 @RequiredArgsConstructor
-@Slf4j
+@Transactional(readOnly = true)
 public class ItemServiceImpl implements ItemService {
 
     private final ItemRepository itemRepository;
@@ -35,23 +38,11 @@ public class ItemServiceImpl implements ItemService {
     private final BookingRepository bookingRepository;
     private final CommentRepository commentRepository;
 
-    private User ensureUser(Long userId) {
-        return userRepository.findById(userId)
-                .orElseThrow(() -> new NotFoundException("Пользователь не найден: id=" + userId));
-    }
-
     @Override
+    @Transactional
     public ItemDto create(Long ownerId, ItemDto dto) {
         User owner = ensureUser(ownerId);
-        if (dto.getName() == null || dto.getName().isBlank()) {
-            throw new ValidationException("Название вещи не должно быть пустым");
-        }
-        if (dto.getDescription() == null || dto.getDescription().isBlank()) {
-            throw new ValidationException("Описание вещи не должно быть пустым");
-        }
-        if (dto.getAvailable() == null) {
-            throw new ValidationException("Статус доступности обязателен");
-        }
+        validateItemDto(dto);
         Item item = ItemMapper.toModel(dto, owner);
         Item saved = itemRepository.save(item);
         log.info("Создана вещь id={} владельцем id={}", saved.getId(), ownerId);
@@ -59,13 +50,16 @@ public class ItemServiceImpl implements ItemService {
     }
 
     @Override
+    @Transactional
     public ItemDto update(Long ownerId, Long itemId, ItemDto patchDto) {
         User owner = ensureUser(ownerId);
         Item existing = itemRepository.findById(itemId)
                 .orElseThrow(() -> new NotFoundException("Вещь не найдена: id=" + itemId));
+
         if (!existing.getOwner().getId().equals(owner.getId())) {
-            throw new NotFoundException("Вещь не найдена: id=" + itemId);
+            throw new NotFoundException("Редактировать вещь может только владелец");
         }
+
         ItemMapper.merge(existing, patchDto);
         Item saved = itemRepository.save(existing);
         log.info("Обновлена вещь id={} владельцем id={}", itemId, ownerId);
@@ -96,40 +90,47 @@ public class ItemServiceImpl implements ItemService {
     public List<ItemDetailsDto> getOwnerItems(Long ownerId) {
         User owner = ensureUser(ownerId);
         List<Item> items = itemRepository.findByOwner(owner);
-        return items.stream().map(item -> {
-            ItemDetailsDto dto = ItemMapper.toDetailsDto(item);
-            List<CommentDto> comments = commentRepository.findByItemId(item.getId())
-                    .stream()
-                    .map(CommentMapper::toDto)
-                    .collect(Collectors.toList());
-            dto.setComments(comments);
-            enrichWithBookings(dto, item);
-            return dto;
-        }).collect(Collectors.toList());
+
+        return items.stream()
+                .map(item -> {
+                    ItemDetailsDto dto = ItemMapper.toDetailsDto(item);
+                    List<CommentDto> comments = commentRepository.findByItemId(item.getId())
+                            .stream()
+                            .map(CommentMapper::toDto)
+                            .collect(Collectors.toList());
+                    dto.setComments(comments);
+                    enrichWithBookings(dto, item);
+                    return dto;
+                })
+                .sorted(Comparator.comparing(ItemDetailsDto::getId))
+                .collect(Collectors.toList());
     }
 
     @Override
     public List<ItemDto> search(String text) {
-        if (text == null || text.isBlank()) return List.of();
+        if (text == null || text.isBlank()) {
+            return Collections.emptyList();
+        }
         return itemRepository.search(text).stream()
                 .map(ItemMapper::toDto)
                 .collect(Collectors.toList());
     }
 
     @Override
+    @Transactional
     public CommentDto addComment(Long userId, Long itemId, CommentDto commentDto) {
         User author = ensureUser(userId);
         Item item = itemRepository.findById(itemId)
                 .orElseThrow(() -> new NotFoundException("Вещь не найдена: id=" + itemId));
 
         LocalDateTime now = LocalDateTime.now();
-        boolean canComment = bookingRepository.existsFinishedBookingForUser(itemId, userId, now);
-        if (!canComment) {
+        if (!bookingRepository.existsFinishedBookingForUser(itemId, userId, now)) {
             throw new ValidationException("Оставить отзыв можно только после завершённой аренды");
         }
         if (commentDto.getText() == null || commentDto.getText().isBlank()) {
             throw new ValidationException("Текст комментария не должен быть пустым");
         }
+
         Comment comment = new Comment();
         comment.setText(commentDto.getText());
         comment.setItem(item);
@@ -137,21 +138,16 @@ public class ItemServiceImpl implements ItemService {
         comment.setCreated(now);
 
         Comment saved = commentRepository.save(comment);
-        log.info("Добавлен комментарий id={} к вещи id={} пользователем id={}", saved.getId(), itemId, userId);
+        log.info("Добавлен комментарий id={} к вещи id={}", saved.getId(), itemId);
         return CommentMapper.toDto(saved);
     }
 
     private void enrichWithBookings(ItemDetailsDto dto, Item item) {
         List<Booking> bookings = bookingRepository.findByItem(item);
-        if (bookings.isEmpty()) {
-            dto.setLastBooking(null);
-            dto.setNextBooking(null);
-            return;
-        }
         LocalDateTime now = LocalDateTime.now();
 
         bookings.stream()
-                .filter(b -> !b.getEnd().isAfter(now))
+                .filter(b -> !b.getStart().isAfter(now))
                 .max(Comparator.comparing(Booking::getEnd))
                 .ifPresent(b -> dto.setLastBooking(BookingMapper.toShortDto(b)));
 
@@ -159,5 +155,22 @@ public class ItemServiceImpl implements ItemService {
                 .filter(b -> b.getStart().isAfter(now))
                 .min(Comparator.comparing(Booking::getStart))
                 .ifPresent(b -> dto.setNextBooking(BookingMapper.toShortDto(b)));
+    }
+
+    private User ensureUser(Long userId) {
+        return userRepository.findById(userId)
+                .orElseThrow(() -> new NotFoundException("Пользователь не найден: id=" + userId));
+    }
+
+    private void validateItemDto(ItemDto dto) {
+        if (dto.getName() == null || dto.getName().isBlank()) {
+            throw new ValidationException("Название вещи не должно быть пустым");
+        }
+        if (dto.getDescription() == null || dto.getDescription().isBlank()) {
+            throw new ValidationException("Описание вещи не должно быть пустым");
+        }
+        if (dto.getAvailable() == null) {
+            throw new ValidationException("Статус доступности обязателен");
+        }
     }
 }
